(gui) fix results table spacing

--- a/style.css
+++ b/style.css
@@ -290,20 +290,18 @@
 		margin-left: 45px;
 	}
 
-	.mongoBrowser .mainBody .tabContainer .resultsTable {
-		/*width: 50%;*/
-		width: 100%;
-		height: 300px;
-		/*float: left;*/
-		overflow-y: scroll;
+	.mongoBrowser .mainBody .tabContainer .resultsTableContainer {
+		min-height:300px;
+		background-color:#ddd;
+		border: 1px solid #aaa;
+		background-color: white;
 	}
 
 	.mongoBrowser .mainBody .tabContainer .resultsTable {
-		/*width: 50%;*/
 		width: 100%;
-		height: 300px;
-		/*float: left;*/
 		overflow-y: scroll;
+		/*on this particular table we set the border in the container to simulate min-height*/
+		border: 0px;
 	}
 
 	.mongoBrowser .mainBody .tabContainer .resultsTable img.typeIcon {
